--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Spotify Wrap</title>
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+  <title>Wrap Me Now!</title>
 </head>
 
 <body>
